--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="content">
         <h1>Click here to receive your Dad Joke of the Day!</h1>
-        <button>Let's Go!</button>
+        <button id="joke-fetch-button">Let's Go!</button>
+        <p id="joke-container">Your dad joke will appear here!</p>
     </div>
     <script src="script.js"></script>
 </body>
